<resources>
    <string name="app_name">BasicLoginRegistration</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="type">Type</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="premiered">Premiered</string>

</resources>